scss/partials/_more_menu.scss
div.more-menu {
  float: right;
  width: 60px;
  height: 30px;
  transform: opacity 180ms ease-in;
  opacity: 1;
  position: relative;

  @include mobile() {
    width: 30px;
  }

  button.more-menu-bt {
    width: 30px;
    height: 30px;
    display: inline;
    background-image: cdnUrl("/img/ML/horizontal_ellipsis.svg");
    background-size: 22px 4px;
    background-position: 0px 15px;
    background-repeat: no-repeat;
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }

    &:hover, &.active {
      background-image: cdnUrl("/img/ML/horizontal_ellipsis_ui_grey.svg");
    }
  }

  button.more-menu-share-bt {
    width: 20px;
    height: 26px;
    display: inline;
    background-image: cdnUrl("/img/ML/stream_tile_share.svg");
    background-size: 14px 14px;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 0.4;
    margin-left: 7px;
    display: inline-block;

    &:hover {
      opacity: 0.8;
    }

    &:active, &:focus {
      opacity: 1;
    }
  }

  ul.more-menu-list {
    position: absolute;
    top: 26px;
    left: calc(100% - 136px);
    width: 146px;
    outline: none;
    z-index: 110;
    background-color: $deep_navy;
    border: 1px solid $deep_tan;
    box-shadow: 0 2px 4px 1px rgba(0,0,0,0.10);
    border-radius: 5px;
    margin: 0;
    padding: 12px 24px 12px 24px;
    list-style-type: none;

    li {
      height: 18px;
      @include avenir_H();
      font-size: 14px;
      color: white;
      cursor: pointer;
      padding-left: 32px;
      padding-bottom: 32px;
      position: relative;
      margin-top: 16px;
      border-bottom: 1px solid $deep_tan;
      opacity: 0.9;

      &:first-child {
        margin-top: 0px;
      }

      &.edit {
        &:before {
          background-image: cdnUrl("/img/ML/more_menu_edit.svg");
        }
      }

      &.delete {
        &:before {
          background-image: cdnUrl("/img/ML/more_menu_delete.svg");
        } 
      }

      &.share {
        &:before {
          background-image: cdnUrl("/img/ML/more_menu_share.svg");
        }
      }

      &.must-see {
        &:before {
          background-image: cdnUrl("/img/ML/more_menu_mustsee.svg");
        }
        border: none;
        padding-bottom: 0px;
      }

      &.must-see-on {
        &:before {
          background-image: cdnUrl("/img/ML/must_see_bolt_blue.svg");
        }
        border: none;
        padding-bottom: 0px;
      }

      &:before {
        content: "";
        position: absolute;
        top: 0px;
        left: 0px;
        width: 14px;
        height: 16px;
        background-repeat: no-repeat;
        background-size: 14px 16px;
        background-position: center;
      }

      &.disabled {
        opacity: 0.4;

        &:hover {
          background-color: transparent;
        }
      }
    }
  }
}

