Do not show the ellipses if the user has not delete/edit permissions on the activity. Set width to auto to avoid problems of alignment when there is only the share.

--- a/scss/partials/_more_menu.scss
+++ b/scss/partials/_more_menu.scss
@@ -1,6 +1,6 @@
 div.more-menu {
   float: right;
-  width: 60px;
+  width: auto;
   height: 30px;
   transform: opacity 180ms ease-in;
   opacity: 1;
